test/zinc_source/compile_errors/functions/02_unknown_named_arg.zn
// expected-error: unknown named argument 'z'
fn add(x, y) {
    return x + y
}

fn main() {
    add(x=1, z=2)
}
